# pagure-cli

./: .stack-all  .travis.yml  CHANGELOG.md  Main.hs  Makefile  README.md  cabal.project  pagure-cli.cabal  pagure.cabal  stack-7.10.3.yaml  stack-lts.yaml  stack-lts12.yaml  stack-lts14.yaml  stack-lts16.yaml  stack.yaml  test.sh
.github/workflows/: build.yml
app/: Main.hs
src/: Main.hs  Pagure.hs
