cabal-version:       2.0
name:                pagure
version:             0.0.0
synopsis:            Pagure client
description:         Pagure client
homepage:            https://github.com/juhp/pagure
bug-reports:         https://github.com/juhp/pagure/issues
license:             GPL-2
license-file:        LICENSE
author:              Jens Petersen
maintainer:          juhpetersen@gmail.com
copyright:           2019 Jens Petersen
category:            Utiliy
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4

source-repository head
  type:                git
  location:            https://github.com/juhp/pagure.git

library
  hs-source-dirs:      src
  exposed-modules:     Pagure
                       

  build-depends:       base >= 4.8.0.2 && < 4.12
                     

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable pagure
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base >= 4.8.0.2 && < 4.12
                     , pagure
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
